--- a/scss/main/_archive.scss
+++ b/scss/main/_archive.scss
@@ -98,6 +98,7 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 200px);
         height: 100vh;
+        overflow: scroll;
     }
 
     .selected {
