--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -193,6 +193,7 @@ svg {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;//400px 400px;
         height: 100vh;
+        overflow: scroll;
     }
 }
 
